update the keydown

--- a/keydown.html
+++ b/keydown.html
@@ -20,7 +20,7 @@
         },
         methods:{
             demo(ev){
-                alert("你按了回车键");
+                alert("你按了回车键");//@keydown.13和@keydown.enter是一样的
                 console.log(ev.keyCode)
             }
         }
