--- a/keydown.html
+++ b/keydown.html
@@ -21,7 +21,7 @@
         methods:{
             demo(ev){
                 alert("你按了回车键");//@keydown.13和@keydown.enter是一样的
-                console.log(ev.keyCode)//@keydown.13和@keydown.enter是一样的
+                console.log(ev.keyCode)
             }
         }
     });
